--- a/zambia/templates/zambia/templates.html
+++ b/zambia/templates/zambia/templates.html
@@ -38,7 +38,7 @@
 			</select>
 		</div>
 		<div class="input_el">
-			<span class="btn_blue btn_space"><input type="submit" name="submit" value="Filter" class="search_btn"><span>&nbsp;</span></span>
+			<span class="btn_blue btn_space"><input type="submit" name="submit" value="Filter" class="search_btn"><span>&nbsp;</span></span><span class="btn_gray"><a href="javascript:;" id="form_reset">Reset</a><span>&nbsp;</span></span>
 		</div>
 		</form>
 		<div class="clear"></div>
@@ -54,6 +54,9 @@
 </script>
 <script type="text/x-handlebars-template" id="checklist-template" charset="utf-8">
 	<td>{{observer.attributes.observer_id}}</td><td>{{date}}</td><td>{{location.attributes.parent.attributes.parent.attributes.parent.attributes.name}}</td><td>{{location.attributes.parent.attributes.parent.attributes.name}}</td><td>{{#if observer.attributes.supervisor}}{{observer.attributes.supervisor.attributes.name}}{{#if observer.attributes.supervisor.attributes.connections.models}} (<strong>{{observer.attributes.supervisor.attributes.connections.models.0.attributes.identity}}</strong>){{/if}}{{else}}&nbsp;{{/if}}</td><td>{{observer.attributes.name}}{{#if observer.attributes.connections.models}} (<strong>{{observer.attributes.connections.models.0.attributes.identity}}</strong>){{/if}}</td><td align="center">{{setup_flag response}}</td><td align="center">{{setup_flag response}}</td><td align="center">{{setup_flag response}}</td><td align="center">{{setup_flag response}}</td><td align="center">Edit</td>
+</script>
+<script type="text/x-handlebars-template" id="checklist-empty-template" charset="utf-8">
+	<tr><td colspan="11" class="empty"><em>No checklists to display</em></td></tr>
 </script>
 <script type="text/javascript" charset="utf-8">
 	function checklist_setup_complete(response) {
@@ -92,4 +95,5 @@
 	Templates.ChecklistFilter = Handlebars.compile($('#checklist-filter-template').html());
 	Templates.ChecklistHeader = Handlebars.compile($('#checklist-header-template').html());
 	Templates.Checklist = Handlebars.compile($('#checklist-template').html());
+	Templates.ChecklistEmpty = Handlebars.compile($('#checklist-empty-template').html());
 </script>
