stab at filtering based on section statuses

--- a/zambia/templates/zambia/templates.html
+++ b/zambia/templates/zambia/templates.html
@@ -6,35 +6,35 @@
 		<div class="input_el"><input type="text" name="location" class="input_smoke" placeholder="Location" id="location__id"></div>
 		<div class="clear"></div>
 		<div class="input_el">
-			<select name="setup_status" id="setup_status" class="input_smoke">
-				<option value="option1">Setup Status</option>
-				<option value="option2">Setup Complete</option>
-				<option value="option3">Setup Missing</option>
-				<option value="option4">Setup Partial</option>
+			<select name="setup_status" id="search_setup_status" class="input_smoke search_field">
+				<option value="">Setup Status</option>
+				<option value="1">Setup Complete</option>
+				<option value="2">Setup Missing</option>
+				<option value="3">Setup Partial</option>
 			</select>
 		</div>
 		<div class="input_el">
-			<select name="voting_status" id="voting_status" class="input_smoke">
-				<option value="option1">Voting Status</option>
-				<option value="option2">Voting Complete</option>
-				<option value="option3">Voting Missing</option>
-				<option value="option4">Voting Partial</option>
+			<select name="voting_status" id="search_voting_status" class="input_smoke search_field">
+				<option value="">Voting Status</option>
+				<option value="1">Voting Complete</option>
+				<option value="2">Voting Missing</option>
+				<option value="3">Voting Partial</option>
 			</select>
 		</div>
 		<div class="input_el">
-			<select name="closing_status" id="closing_status" class="input_smoke">
-				<option value="option1">Closing Status</option>
-				<option value="option2">Closing Complete</option>
-				<option value="option3">Closing Missing</option>
-				<option value="option4">Closing Partial</option>
+			<select name="closing_status" id="search_closing_status" class="input_smoke search_field">
+				<option value="">Closing Status</option>
+				<option value="1">Closing Complete</option>
+				<option value="2">Closing Missing</option>
+				<option value="3">Closing Partial</option>
 			</select>
 		</div>
 		<div class="input_el">
-			<select name="counting_status" id="counting_status" class="input_smoke">
-				<option value="option1">Counting Status</option>
-				<option value="option2">Counting Complete</option>
-				<option value="option3">Counting Missing</option>
-				<option value="option4">Counting Partial</option>
+			<select name="counting_status" id="search_counting_status" class="input_smoke search_field">
+				<option value="">Counting Status</option>
+				<option value="1">Counting Complete</option>
+				<option value="2">Counting Missing</option>
+				<option value="3">Counting Partial</option>
 			</select>
 		</div>
 		<div class="input_el">
