moved dashboard to root route

--- a/webapp/templates/webapp/index.html
+++ b/webapp/templates/webapp/index.html
@@ -32,7 +32,7 @@
 			<div id="navigation" > 
 				<div class="menu-main-menu-container">
 					<ul id="dropmenu" class="menu">
-						<li><a href="#!/dashboard">Dashboard</a></li> 						
+						<li><a href="#">Dashboard</a></li> 						
 						<li><a href="#!/elections/checklists">Elections</a>
 							<ul class="sub-menu"> 
 								<li><a href="#!/elections/checklists">Checklists</a></li>
@@ -54,7 +54,7 @@
 					<h1>Page Title</h1>
 				</div>
 				<div class="page-title-link">
-					<a href="#!/dashboard">Back to Dashboard &raquo;</a>
+					<a href="#">Back to Dashboard &raquo;</a>
 				</div>
 				<p class="clr"></p>
 			</div><!--/page-title-content-->
