--- a/webapp/templates/webapp/templates.html
+++ b/webapp/templates/webapp/templates.html
@@ -18,7 +18,7 @@
 				<h1>{{title}}</h1>
 			</div>
 			<div class="page-title-link">
-				<a href="#!/dashboard">Back to Dashboard &raquo;</a>
+				<a href="#">Back to Dashboard &raquo;</a>
 			</div>
 			<p class="clr"></p>
 		</div>
