modified checklist form

--- a/webapp/templates/webapp/index2.html
+++ b/webapp/templates/webapp/index2.html
@@ -524,7 +524,7 @@
 			</tr>
 			<tr>
 				<td>33</td>
-				<td colspan="4" align="center">Were the official results for the <u>polling station</u> posted for the public to see?</td>
+				<td colspan="4">Were the official results for the <u>polling station</u> posted for the public to see?</td>
 				<td align="center"><label><input type="radio" name="thirty_three" class="radio"><span>Yes</span></label></td>
 				<td align="center"><label><input type="radio" name="thirty_three" class="radio"><span>No</span></label></td>
 				<td align="center">33</td>
