--- a/zambia/templates/zambia/templates.html
+++ b/zambia/templates/zambia/templates.html
@@ -87,6 +87,31 @@
 <script type="text/x-handlebars-template" id="checklist-empty-template" charset="utf-8">
 	<tr><td colspan="11" class="empty"><em>No checklists to display</em></td></tr>
 </script>
+<script type="text/x-handlebars-template" id="contact-search-template" charset="utf-8">
+	<div class="search_pane_dashboard">
+		<form id="search">
+		<div class="input_el"><input type="text" name="observer_id" class="input_smoke search_field" id="search_observer_id" placeholder="Monitor ID" pattern=".*[0-9]" title="Numeric figures only"></div>
+		<div class="input_el"><input type="text" name="name" class="input_smoke search_field" id="search_name__icontains" placeholder="Name"></div>
+		<div class="input_el"><input type="text" name="phone" class="input_smoke search_field" id="search_connections__identity__endswith" placeholder="Phone Number" pattern=".*[0-9]" title="Numeric figures only"></div>		
+		<div class="input_el"><input type="text" name="location" class="input_smoke" id="location__id" placeholder="Location"></div>
+		<div class="input_el">
+			<span class="btn_blue btn_space"><input type="submit" name="submit" value="Search" class="search_btn"><span>&nbsp;</span></span><span class="btn_gray"><a href="javascript:;" id="form_reset">Reset</a><span>&nbsp;</span></span>
+		</div>
+		</form>
+		<div class="clear"></div>
+	</div>
+</script>
+<script type="text/x-handlebars-template" id="contact-header-template" charset="utf-8">
+	<tbody>
+		<tr><th><a href="javascript:;" class="sortable_column" id="sort_observer_id">Monitor Id</a></th><th><a href="javascript:;" class="sortable_column" id="sort_name">Name</a></th><th><a href="javascript:;" class="sortable_column" id="sort_role__name">Role</a></th><th><a href="javascript:;" class="sortable_column" id="sort_connections__identity">Phone No.</a></th><th><a href="javascript:;" class="sortable_column" id="sort_location__name">Location</a></th><th><a href="javascript:;" class="sortable_column" id="sort_partner">Partner</a></th><th style="text-align:center">Edit</th></tr>
+	</tbody>
+</script>
+<script type="text/x-handlebars-template" id="contact-template" charset="utf-8">
+	<td>{{observer_id}}</td><td>{{name}}</td><td>{{role.name}}</td><td>{{connections.models.0.attributes.identity}}</td><td>{{location.name}} ({{location.type.name}})</td><td>{{partner}}</td><td style="text-align:center"><a href="#!/contact/1">Edit</a></td>
+</script>
+<script type="text/x-handlebars-template" id="contact-empty-template" charset="utf-8">
+	<tr><td colspan="5" class="empty"><em>No contacts to display</em></td></tr>
+</script>
 <script type="text/javascript" charset="utf-8">
 	function checklist_setup_complete(response) {
 	    return _.all(['A', 'B', 'CA', 'CB', 'CC', 'CE', 'CF', 'CG', 'CH', 'D', 'E', 'EA', 
@@ -219,4 +244,8 @@
 	Templates.Checklist = Handlebars.compile($('#checklist-template').html());
 	Templates.ChecklistEmpty = Handlebars.compile($('#checklist-empty-template').html());
 	Templates.ZambiaDashboardScreen = Handlebars.compile($('#screen-zambia-dashboard-template').html());
+	Templates.ContactSearch = Handlebars.compile($('#contact-search-template').html());
+	Templates.Contact = Handlebars.compile($('#contact-template').html());
+	Templates.ContactEmpty = Handlebars.compile($('#contact-empty-template').html());
+	Templates.ContactHeader = Handlebars.compile($('#contact-header-template').html());
 </script>
