more modification to checklist template

--- a/webapp/templates/webapp/index2.html
+++ b/webapp/templates/webapp/index2.html
@@ -241,45 +241,45 @@
 			<tr>
 				<td>11</td>
 				<td colspan="2">How many people were <u>permitted to vote</u> even though they did not have their NRC <u>and</u> voter’s card?</td>
-				<td align="center"><label><input type="radio" name="ten" class="radio"><span>None<br />(0)</span></label></td>
-				<td align="center"><label> <input type="radio" name="ten" class="radio"><span>Few<br />(1-5)</span></label></td>
-				<td align="center"><label> <input type="radio" name="ten" class="radio"><span>Some<br />(6-25)</span></label></td>
-				<td align="center"><label> <input type="radio" name="ten" class="radio"><span>Many<br />(26+)</span></label></td>
+				<td align="center"><label><input type="radio" name="eleven" class="radio"><span>None<br />(0)</span></label></td>
+				<td align="center"><label> <input type="radio" name="eleven" class="radio"><span>Few<br />(1-5)</span></label></td>
+				<td align="center"><label> <input type="radio" name="eleven" class="radio"><span>Some<br />(6-25)</span></label></td>
+				<td align="center"><label> <input type="radio" name="eleven" class="radio"><span>Many<br />(26+)</span></label></td>
 				<td align="center">11</td>
 			</tr>
 			<td>12</td>
 				<td colspan="2">How many people were <u>permitted to vote</u> even though their name was not in the voter’s register?</td>
-				<td align="center"><label><input type="radio" name="ten" class="radio"><span>None<br />(0)</span></label></td>
-				<td align="center"><label> <input type="radio" name="ten" class="radio"><span>Few<br />(1-5)</span></label></td>
-				<td align="center"><label> <input type="radio" name="ten" class="radio"><span>Some<br />(6-25)</span></label></td>
-				<td align="center"><label> <input type="radio" name="ten" class="radio"><span>Many<br />(26+)</span></label></td>
+				<td align="center"><label> <input type="radio" name="twelve" class="radio"><span>None<br />(0)</span></label></td>
+				<td align="center"><label> <input type="radio" name="twelve" class="radio"><span>Few<br />(1-5)</span></label></td>
+				<td align="center"><label> <input type="radio" name="twelve" class="radio"><span>Some<br />(6-25)</span></label></td>
+				<td align="center"><label> <input type="radio" name="twelve" class="radio"><span>Many<br />(26+)</span></label></td>
 				<td align="center">12</td>
 			</tr>
 			<tr>
 				<td>13</td>
 				<td colspan="2">How many people who requested assistance in voting were <u>denied</u> assistance?</td>
-				<td align="center"><label><input type="radio" name="ten" class="radio"><span>None<br />(0)</span></label></td>
-				<td align="center"><label> <input type="radio" name="ten" class="radio"><span>Few<br />(1-5)</span></label></td>
-				<td align="center"><label> <input type="radio" name="ten" class="radio"><span>Some<br />(6-25)</span></label></td>
-				<td align="center"><label> <input type="radio" name="ten" class="radio"><span>Many<br />(26+)</span></label></td>
+				<td align="center"><label> <input type="radio" name="thirteen" class="radio"><span>None<br />(0)</span></label></td>
+				<td align="center"><label> <input type="radio" name="thirteen" class="radio"><span>Few<br />(1-5)</span></label></td>
+				<td align="center"><label> <input type="radio" name="thirteen" class="radio"><span>Some<br />(6-25)</span></label></td>
+				<td align="center"><label> <input type="radio" name="thirteen" class="radio"><span>Many<br />(26+)</span></label></td>
 				<td align="center">13</td>
 			</tr>
 			<tr>
 				<td>14</td>
 				<td colspan="2">How many people were permitted to vote on behalf of someone other than themselves?</td>
-				<td align="center"><label><input type="radio" name="ten" class="radio"><span>None<br />(0)</span></label></td>
-				<td align="center"><label> <input type="radio" name="ten" class="radio"><span>Few<br />(1-5)</span></label></td>
-				<td align="center"><label> <input type="radio" name="ten" class="radio"><span>Some<br />(6-25)</span></label></td>
-				<td align="center"><label> <input type="radio" name="ten" class="radio"><span>Many<br />(26+)</span></label></td>
+				<td align="center"><label> <input type="radio" name="fourteen" class="radio"><span>None<br />(0)</span></label></td>
+				<td align="center"><label> <input type="radio" name="fourteen" class="radio"><span>Few<br />(1-5)</span></label></td>
+				<td align="center"><label> <input type="radio" name="fourteen" class="radio"><span>Some<br />(6-25)</span></label></td>
+				<td align="center"><label> <input type="radio" name="fourteen" class="radio"><span>Many<br />(26+)</span></label></td>
 				<td align="center">14</td>
 			</tr>
 			<tr>
 				<td>15</td>
 				<td  colspan="2">How many people who voted were not marked with indelible ink?</td>
-				<td align="center"><label><input type="radio" name="ten" class="radio"><span>None<br />(0)</span></label></td>
-				<td align="center"><label> <input type="radio" name="ten" class="radio"><span>Few<br />(1-5)</span></label></td>
-				<td align="center"><label> <input type="radio" name="ten" class="radio"><span>Some<br />(6-25)</span></label></td>
-				<td align="center"><label> <input type="radio" name="ten" class="radio"><span>Many<br />(26+)</span></label></td>
+				<td align="center"><label> <input type="radio" name="fifteen" class="radio"><span>None<br />(0)</span></label></td>
+				<td align="center"><label> <input type="radio" name="fifteen" class="radio"><span>Few<br />(1-5)</span></label></td>
+				<td align="center"><label> <input type="radio" name="fifteen" class="radio"><span>Some<br />(6-25)</span></label></td>
+				<td align="center"><label> <input type="radio" name="fifteen" class="radio"><span>Many<br />(26+)</span></label></td>
 				<td align="center">15</td>
 			</tr>
 			<tr>
