--- a/webapp/templates/webapp/index.html
+++ b/webapp/templates/webapp/index.html
@@ -24,6 +24,58 @@
 		Backbone.history.start({root: '/home/'});
 	});
 </script>
+<style type="text/css" media="screen">
+	.input_smoke {font-size:0.8em;height:1.2em;background-color:#ddd;border:1px solid #ccc;width:18em;padding:3px 10px;border-radius:4px;}
+	select.input_smoke {height:1.7em;width:19.2em;}
+	.input_smoke:focus {background-color:#ffa500;}
+	.filter_pane {
+		background-color:#eee;
+		width:920px;
+		padding:20px;
+		padding-bottom: 10px;
+	}
+	.filter_pane_dashboard {
+		background-color:#eee;
+		width:920px;
+		padding:20px;
+		padding-bottom:0;
+		border-radius:5px;
+		-webkit-border-radius:5px;
+		-moz-border-radius:5px;
+	}
+	.filter_pane_bottom {
+		border-bottom-left-radius:5px;
+		-webkit-border-bottom-left-radius:5px;
+		-moz-border-bottom-left-radius:5px;
+		border-bottom-right-radius:5px;
+		-webkit-border-bottom-right-radius:5px;
+		-moz-border-bottom-right-radius:5px;
+		height: 10px;
+		background-color: #eee;
+	}
+	#filter_dropper {
+		background-color:orange;
+		margin-left: 800px;
+		width: 100px;
+		padding: 8px;
+		text-align: center;
+		color: white;
+		cursor: pointer;
+		border-bottom-left-radius:5px;
+		-webkit-border-bottom-left-radius:5px;
+		-moz-border-bottom-left-radius:5px;
+		border-bottom-right-radius:5px;
+		-webkit-border-bottom-right-radius:5px;
+		-moz-border-bottom-right-radius:5px;
+	}
+	div.input_el {float:left; margin-right:10px;margin-bottom:1.5em;}
+	div.clear {clear:left;}
+	.btn_space {margin-right:1em;}
+	.full_width_content label {display:block;font-size:1.5em;clear:both;overflow:auto;margin-bottom:0.8em;border-top:1px dotted #D3DAD9;padding-top:0.8em;}
+	.full_width_content label:first-child { border:0;}
+	.full_width_content span.label {display:block;float:left;width:12em;vertical-align:middle;line-height:1.3em;}
+	.full_width_content input, select {display:block;float:left;}
+</style>
 </head>
 <body>
 <div id="wrapper">
